Reduced width of some containers to avoid unnecessary whitespace

--- a/src/Bootstrap/less/theme/page-home.less
+++ b/src/Bootstrap/less/theme/page-home.less
@@ -41,7 +41,7 @@
 
   .circuit-board {
     margin-top: 20px;
-    width: 860px;
+    width: 830px;
     height: 396px;
     position: relative;
     margin: 0 auto;
@@ -62,7 +62,7 @@
     }
 
     .circuit-board-pd {
-      left: 423px;
+      left: 408px;
       top: 10px;
       float: left;
       width: 235px;
@@ -76,7 +76,7 @@
       left: 0;
       top: 63px;
       float: left;
-      width: 190px;
+      width: 175px;
 
       &.triangle:after {
         right: 30px;
@@ -87,7 +87,7 @@
       right: 0;
       top: 87px;
       float: right;
-      width: 190px;
+      width: 175px;
 
       &.triangle:after {
         left: 30px;
